--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -5,13 +5,8 @@
   </p>
 
   <p>
-    <strong>Post:</strong>
-    <%= comment.post_id %>
-  </p>
-
-  <p>
     <strong>User:</strong>
-    <%= comment.user_id %>
+    <%= comment.user.username %>
   </p>
 
 </div>
