Add ransack search/sort for posts#index

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,14 +1,50 @@
 
 
-<h1>Posts</h1>
+<div class="container my-2">
+  <div class="d-flex justify-content-between align-items-center">
+    <h1>Posts</h1>
+    <%= link_to new_post_path do %>
+      <i class="fa-solid fa-plus"></i>
+    <% end %>
+  </div>
 
-<div id="posts">
-  <% @posts.each do |post| %>
-    <%= render post %>
-    <p>
-      <%= link_to "Show this post", post %>
-    </p>
+  <%= search_form_for @q, class: "my-3" do |f| %>
+    <div>
+      <%= f.label :content_cont, "Content containing", class: "form-label" %>
+      <%= f.text_field :content_cont, class: "form-control", placeholder: "Enter a few characters" %>
+    </div>
+
+    <div>
+      <%= f.label :user_username_eq, "Username containing", class: "form-label" %>
+      <%= f.text_field :user_username_eq, class: "form-control", placeholder: "Enter a few characters" %>
+    </div>
+
+    <div class="d-flex justify-content-between align-items-center my-3">
+      <%= f.submit class: "btn btn-primary btn-block" %>
+      <%= link_to "Clear", posts_path %>
+    </div>
   <% end %>
-</div>
 
-<%= link_to "New post", new_post_path %>
+  <table id="posts" class="table table-responsive table-hover"">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">User</th>
+        <th scope="col"><%= sort_link(@q, :content, "Content") %></th>
+        <th scope="col"><%= sort_link(@q, :created_at, "Date") %></th>
+        <th scope="col"></th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @posts.each do |post| %>
+        <tr>
+          <th scope="row"><%= post.id %></th>
+          <td><%= post.user.username %></td>
+          <td><%= post.content.truncate(100) %></td>
+          <td><%= post.created_at.strftime("%m/%d/%Y %I:%M %p") %></td>
+          <td><%= link_to 'See more', post_path(post) %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
