--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,10 @@
 
   <body>
     <%= render "shared/nav" %>
-    <%= render "shared/flash" %>
-    <%= yield %>
+    <div class="container-fluid">
+      <%= render "shared/flash" %>
+      <%= render "shared/breadcrumb" %>
+      <%= yield %>
+    </div>
   </body>
 </html>
