--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,3 @@
-
-
 <h1>Posts</h1>
 
 <div id="posts">
@@ -12,3 +10,5 @@
 </div>
 
 <%= link_to "New post", new_post_path %>
+
+<%= paginate @posts %>
