--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,21 @@
 <h1>Posts</h1>
 
+<%= search_form_for @q do |f| %>
+  <div>
+    <%= f.label :content_or_user_username_cont, "Content or username containing" %>
+    <%= f.text_field :content_or_user_username_cont, :placeholder => "Enter a few characters" %>
+  </div>
+
+  <div>
+    <%= f.label :created_at_cont, "Created at date" %>
+    <%= f.date_field :created_at_cont, :placeholder => "Enter a date" %>
+  </div>
+
+  <%= f.submit :class => "btn btn-primary btn-block" %>
+  
+  <a href="/posts">Clear filters</a>
+<% end %>
+
 <div id="posts">
   <% @posts.each do |post| %>
     <%= render post %>
