--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -11,6 +11,14 @@
     <div class="collapse navbar-collapse" id="collapsible-nav-links">
       <ul class="navbar-nav mr-auto">
         <% if current_user.present? %>
+          <% if current_user.admin? %>
+            <li class="nav-item">
+              <%= link_to 'Admin', "/admin", class: "nav-link" %>
+            </li>
+            <li class="nav-item">
+              <%= link_to 'Insights', "/blazer", class: "nav-link" %>
+            </li>
+          <% end %>
           <li class="nav-item">
             <%= link_to 'Sign Out', destroy_user_session_path, class: "nav-link", data: { "turbo-method": :delete } %>
           </li>
