--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -20,6 +20,9 @@
             </li>
           <% end %>
           <li class="nav-item">
+            <%= link_to 'Edit Profile', edit_user_registration_path, class: "nav-link" %>
+          </li>
+          <li class="nav-item">
             <%= link_to 'Sign Out', destroy_user_session_path, class: "nav-link", data: { "turbo-method": :delete } %>
           </li>
         <% else %>
