--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,8 @@
 <html>
   <head>
     <title>Readit</title>
-    <%= display_meta_tags(default_meta_tags) %>
+    <%= display_meta_tags(MetaTagService.defaults) %>
+    <%= favicon_link_tag %>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
