--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Readit</title>
-    <%= display_meta_tags(MetaTagService.defaults) %>
+    <% display_meta_tags(MetaTagService.defaults) %>
     <%= favicon_link_tag %>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
