--- a/app/views/posts/_card.html.erb
+++ b/app/views/posts/_card.html.erb
@@ -1,14 +1,15 @@
+<%# locals: (post:) %>
 <div id="<%= dom_id post %>" class="card">
   <div class="card-header">
     <div class="d-flex align-items-center">
       <h5 class="card-title me-auto"><%= post.user.username %></h5>
-      <% if policy(@post).edit? %>
-        <%= link_to edit_post_path(@post), class: "me-3" do %>
+      <% if policy(post).edit? %>
+        <%= link_to edit_post_path(post), class: "me-3" do %>
           <i class="fa-solid fa-pen-to-square fa-xl"></i>
         <% end %>
       <% end %>
-      <% if policy(@post).destroy? %>
-        <%= link_to @post, data: { "turbo-method": :delete, "turbo-confirm": "Are you sure? This is NOT reversible" }, class: "btn btn-outline-danger" do %>
+      <% if policy(post).destroy? %>
+        <%= link_to post, data: { "turbo-method": :delete, "turbo-confirm": "Are you sure? This is NOT reversible" }, class: "btn btn-outline-danger" do %>
           <i class="fa-solid fa-trash"></i>
         <% end %>
       <% end %>
