--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -21,27 +21,7 @@
       </div>
     <% end %>
   </div>
-  <ul class="list-group list-group-flush">
-    <% @posts.each do |post| %>
-      <%= link_to post, class: "list-group-item" do %>
-        <div class="d-flex align-items-center">
-          <div class="me-auto">
-            <h5 class="card-title">
-              <%= post.user.username %>
-              <% if post.flagged? %>
-                <i class="fa-solid fa-flag fa-shake text-danger"></i>
-              <% end %>
-            </h5>
-            <p class="card-text"><%= post.content.truncate(150) %></p>
-            <small class="text-secondary"><%= post.created_at.strftime("%m/%d/%Y %I:%M %p") %></small>
-          </div>
-          <div class="p-2">
-            <i class="fa-solid fa-chevron-right"></i>
-          </div>
-        </div>
-      <% end %>
-    <% end %>
-  </ul>
+  <%= render "posts/list_group", posts: @posts %>
 </div>
 
 <%= paginate @posts %>
