--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,8 +4,6 @@
 
 <h3>Comments</h3>
 <div>
-  <% @post.comments.each do |comment| %>
-    <%= render comment %>
-  <% end %>
+  <%= render partial: "comments/comment", collection: @post.comments, as: :comment %>
 </div>
 <%= render "comments/form", comment: @post.comments.new %>
