--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
     <%= render "shared/cdn_assets" %>
+    <link rel="manifest" href="/manifest.json" />
   </head>
 
   <body>
